<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="nos">1</string>
    <string name="order">Order</string>
    <string name="price">Order Summary</string>
    <string name="nos1">$0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="toppings">Toppings</string>
    <string name="wc">Whipped cream</string>
    <string name="ch">Chocolate</string>
    <string name="name">Name</string>
    <string name="enterName">Enter your Name</string>
    <string name="maxCoffee">Maximum hundred coffee can be ordered</string>
    <string name="minCoffee">Minimum one coffee can be ordered</string>
    <string name="order_summary_name">Name: <xliff:g example="Sambit" id="name">%s</xliff:g></string>
    <string name="order_summary_wc">Add whipped cream? <xliff:g example="true" id="tf">%b</xliff:g></string>
    <string name="order_summary_c">Add Chocolate? <xliff:g example="true" id="tf1">%b</xliff:g></string>
    <string name="order_summary_q">Quantity: <xliff:g example="1" id="quan">%o</xliff:g></string>
    <string name="order_summary_t">Total:  <xliff:g example="$1" id="tot">%s</xliff:g></string>
    <string name="thank">Thank you!</string>

</resources>
